* Mon Oct 05 2020 Andy Adrian <andy.adrian@onyxpoint.com> - 3.1.2-0
- Change order of import on ``compliance_markup::compliance_map`` so Hiera has
  precedence.
- This means that users may now override all settings from the underlying
  compliance maps across all modules to fit their environment specifics.

* Wed Sep 16 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
- Add tests for profile merging
- Deduplicate profile, control, ce, and check names in enforcement tests to
  avoid cross-contamination of test data
- Remove useless loops in list_puppet_params function
- Fix calls to deep_merge!
- Fix logic for merging oval-ids, controls, and identifiers
- Add begin/rescue blocks around merges to avoid problems with incorrect data

* Fri Sep 11 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
- Add controls, identifiers, and oval-ids
- Work around rspec failure
- Apply confinement before merging values
- Ignore undefined ces when correlating checks and profiles

* Mon Jun 22 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
- Deep merge hash values in the Hiera backend
- Reduce the amount of data passed around in the Hiera backend

* Fri May 29 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
- Support confinement in profiles, controls, and ces (as well as checks)
- Add rspec tests for compliance_markup::enforcement

* Mon Apr 13 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
- Add EL8 support
- Ensure that the Hiera backend recurses as little as possible to improve
  performance.
- Remove all support for v1 data since it was experimental and removed in 3.0.0
- Removed the deprecated (experimental) Hiera v3 backend
- Removed the deprecated Puppet 3 function

* Fri Apr 10 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
- Support arrays of potential matches in confinement blocks
- Support structured facts in confinement
